tests/compile_fail/inc_dec_struct/source.c
struct Point {
    int x;
};

int main(void) {
    struct Point p;
    p++;
    return 0;
}
